# SherpaHighLevel

./: .gitignore  LICENSE  README.md  TODOs  launchWasp.bat  launchWasp_105.bat  launchWasp_106.bat  ros_odroid.txt
catkin_ws/: launchSHERPAwasp.sh  launchSHERPAwasp.sh~
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/pos_mixer/: CMakeLists.txt  CMakeLists.txt~
catkin_ws/pos_mixer/src/: pos_mixer.cpp  pos_mixer.cpp~
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/camera_handler_SHERPA/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/camera_handler_sherpa/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/casy_rover/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/cmd_verifier/: CMakeLists.txt  package.xml
catkin_ws/src/dcm_wasp_bridge/: CMakeLists.txt  package.xml
catkin_ws/src/frame/: CMakeLists.txt  package.xml
catkin_ws/src/guidance_node/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/guidance_node_amsl/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/guidance_node_speed_ned/: CMakeLists.txt  README.txt  package.xml
catkin_ws/src/launch_node/: CMakeLists.txt  package.xml
catkin_ws/src/mloader/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/mms/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/mms_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/pos_filter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/pos_mixer/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/qos_sensors_autopilot/: CMakeLists.txt  package.xml
catkin_ws/src/reference/: CMakeLists.txt  Distance.msg  package.xml
catkin_ws/src/swm_interface/: CMakeLists.txt  package.xml
catkin_ws/src/swm_interface_cpp/: CMakeLists.txt  package.xml
catkin_ws/src/wasp_follow_human1/: CMakeLists.txt  package.xml  package.xml~
catkin_ws/src/wasp_follow_human1/msg/: Operator.msg  Operator.msg~
catkin_ws/src/wasp_follow_human1/src/: follow_human_node.cpp  follow_human_node.cpp~  test_OperatorMSG.cpp  test_OperatorMSG.cpp~
scripts/: README_scripts.txt  bag_script.sh  eurathlon.sh  eurathlon_script_RC_stream_bridge.sh  jcacace@192.168.0.124  killAll  killAll~  launchSHERPAwasp  launchSHERPAwasp.sh  launchSHERPAwasp~  launch_UNIBO_gcs~  launch_camera_handler_SHERPA  launch_daemons~  launch_global.desktop  launch_global.sh  launch_mavsys  launch_mms  launch_mms_group  launch_uniboAMSLAUSB~  launch_uniboAMSLUSB  launch_unibo_GCS  launch_usb_cam_node  launch_usb_cam_node~  launch_web_video_server  mailbox.sh  ros_master.sh  streaming_cam_640x480_10fps.sh  streaming_cam_640x480_20fps.sh  transfer_file  transfer_file.save  transfer_file_old  transfer_file~
scripts/mediator/: swm_zyre_config_wasp105.json  swm_zyre_config_wasp107.json  swm_zyre_config_wasp108.json  wasp105.json  wasp107.json  wasp108.json
scripts/screen/: laser_wasp  location_champoluc.launch  screen_swm  screen_wasp0  screen_wasp0_MEL  screen_wasp0_artva  screen_wasp0_camera  screen_wasp0_real  screen_wasp105_artva  screen_wasp105_camera  screen_wasp105_real  screen_wasp107_artva  screen_wasp107_camera  screen_wasp107_real  screen_wasp108_artva  screen_wasp108_camera  screen_wasp108_real  screen_wasp1_real  screen_wasp2_real
(+946 files in other folders)
